<resources>
    <string name="app_name">HLOLI</string>
    <string name="action_edit">share</string>
    <string name="search">search</string>
    <string name="search_hint">please input key word</string>
    <string name="clear_history">clear history</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="reminder">Kindly Reminder</string>
    <string name="ensure">are you sure to clear all?</string>
    <string name="news_detail">Article Detail</string>
    <string name="no_more_data">no more data</string>
    <string name="transition">transition</string>
    <string name="home">HOME</string>
    <string name="other">OTHER</string>
    <string name="share_title">Thanks for sharing</string>
    <string name="about_me">A new learner in Android but staying curious for new.</string>
    <string name="github">Github:https://github.com/Yuanhongliang</string>
    <string name="stackoverflow">stackoverflow:http://stackoverflow.com/users/6943986/xiaoyuan</string>
    <string name="about_title">About Me</string>
    <string name="switch_language">Language choose</string>
    <string name="language">Language</string>
    <string name="share_text">https://github.com/Yuanhongliang</string>
    <string name="clear_cache">Clear Cache(%1$s)</string>
    <string name="fake">pretend to have OnClick</string>
    <string name="net_error">please check your network</string>
    <string name="next">跳转</string>
    <string name="sort">分类</string>
    <string name="shop_car">购物车</string>
    <string name="me">我的</string>
    <string name="version">发现新版本</string>
    <string name="new_version">当前已是最新版本</string>
    <string name="update_content">更新内容:</string>
    <string name="version_software">软件版本:</string>
    <string name="say_shaohou">稍后再说</string>
    <string name="now_update">立即更新</string>
    <string name="description">1、积分券充值功能上线;\n2、虚拟类商品上线;\n3、系统性能优化;\n4、登录后置;</string>
    <string name="e">微信公众号: 中信e家</string>
    <string name="check_update">检测更新</string>
    <string name="refresh">刷新</string>
    <string name="input_check">请输入验证码</string>
    <string name="input_pwd">请输入登录密码</string>
    <string name="input_num">请输入账号或手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="point">网络不给力,请检查网络设置!</string>
    <string name="phone_num">手机号</string>
    <string name="check_num">验证码</string>
    <string name="_6_20">请输入6-16位登录密码</string>
    <string name="get_yzm">获取验证码</string>
    <string name="lyt">乐益通</string>
    <string name="get_pwd">您正在通过手机号进行验证</string>
    <string name="new_pwd">新密码</string>
    <string name="input_num_six">请输入6位数字</string>
    <string name="shuoming">注册代表已阅读并同意</string>
    <string name="agreement">易家注册用户协议</string>
    <string name="login_pwd">登录密码</string>
    <string name="finish">完成</string>
    <string name="input_login_pwd">请输入新密码</string>
    <string name="fast_login">快速登录</string>
    <string name="wb_login">微博登录</string>
    <string name="qq_login">qq登录</string>
    <string name="wx_login">微信登录</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="input_yzm">请输入验证码</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="forget_pwd">找回密码</string>
    <string name="retry">重试</string>
</resources>
