<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.me.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/title_left_activity_login"
            android:layout_width="@dimen/common_four"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_two"
            android:drawableLeft="@mipmap/icon_close"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/title_right_activity_login"
            android:layout_width="@dimen/common_six"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/common_two"
            android:gravity="center_vertical|right"
            android:text="@string/reg"
            android:textColor="@color/lyt_color"
            android:textSize="@dimen/text_size_seven" />

        <TextView
            android:id="@+id/title_center_activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/phone_color"
            android:textSize="@dimen/text_size_title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title">

        <LinearLayout
            android:id="@+id/ll_activity_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_four"
            android:layout_marginLeft="@dimen/common_three_eight"
            android:layout_marginRight="@dimen/common_three_eight"
            android:layout_marginTop="@dimen/common_seven"
            android:background="@drawable/bt_username_corner"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_phone_activity_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/common"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:hint="@string/input_num"
                android:imeOptions="flagNavigateNext"
                android:inputType="number"
                android:lines="1"
                android:text="15901126195"
                android:maxLength="11"
                android:singleLine="true"
                android:textColorHint="@color/check_color"
                android:textSize="@dimen/text_size_five" />

            <ImageView
                android:id="@+id/imgv_clear_num_activity_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/common_one_five"
                android:background="@mipmap/icon_delete"
                android:gravity="center_vertical"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_four"
            android:layout_below="@+id/ll_activity_login"
            android:layout_marginLeft="@dimen/common_three_eight"
            android:layout_marginRight="@dimen/common_three_eight"
            android:layout_marginTop="@dimen/common_two"
            android:background="@drawable/bt_username_corner"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_pwd_activity_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/common"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:hint="@string/input_pwd"
                android:imeOptions="flagNavigateNext"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="@color/check_color"
                android:textSize="@dimen/text_size_five" />

            <ImageView
                android:id="@+id/imgv_eye_activity_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/common_one_two"
                android:background="@mipmap/icon_notvisible" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_commit_activity_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_four"
            android:layout_below="@+id/ll_activity_pwd"
            android:layout_marginLeft="@dimen/common_three_eight"
            android:layout_marginRight="@dimen/common_three_eight"
            android:layout_marginTop="@dimen/common_four"
            android:background="@drawable/bt_login_corner"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_seven" />

        <TextView
            android:id="@+id/tv_phone_fast_activity_login"
            android:layout_width="@dimen/common_six"
            android:layout_height="@dimen/common_four"
            android:layout_below="@+id/bt_commit_activity_login"
            android:layout_marginLeft="@dimen/common_three_eight"
            android:layout_marginTop="@dimen/common"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/fast_login"
            android:textColor="@color/lyt_color" />

        <TextView
            android:id="@+id/tv_forget_pwd_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_four"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/bt_commit_activity_login"
            android:layout_marginRight="@dimen/common_three_eight"
            android:layout_marginTop="@dimen/common"
            android:gravity="center_vertical"
            android:text="忘记密码"
            android:textColor="@color/lyt_color" />

        <LinearLayout
            android:id="@+id/ll_activity_qq_wx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/common_three_five"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_activity_wx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_two"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgv_wx_activity_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/icon_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/common"
                    android:text="@string/wx_login"
                    android:textColor="@color/name_pwd"
                    android:textSize="@dimen/text_size_three" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_activity_wb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgv_wb_activity_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/icon_weibo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/common"
                    android:text="@string/wb_login"
                    android:textColor="@color/name_pwd"
                    android:textSize="@dimen/text_size_three" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_activity_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_two"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgv_qq_activity_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/icon_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/common"
                    android:text="@string/qq_login"
                    android:textColor="@color/name_pwd"
                    android:textSize="@dimen/text_size_three" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
